--- a/codebase/package.json
+++ b/codebase/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "devDependencies": {
     "autoprefixer": "^10.4.19",
+    "daisyui": "^4.7.3",
     "postcss": "^8.4.38",
     "solid-devtools": "^0.29.2",
     "tailwindcss": "^3.4.1",
