--- a/codebase/package.json
+++ b/codebase/package.json
@@ -1,26 +1,31 @@
 {
-  "name": "vite-template-solid",
-  "version": "0.0.0",
-  "description": "",
-  "scripts": {
-    "start": "vite",
-    "dev": "vite",
-    "build": "vite build",
-    "serve": "vite preview"
-  },
-  "license": "MIT",
-  "devDependencies": {
-    "autoprefixer": "^10.4.19",
-    "daisyui": "^4.7.3",
-    "postcss": "^8.4.38",
-    "solid-devtools": "^0.29.2",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3",
-    "vite": "^5.0.11",
-    "vite-plugin-solid": "^2.8.2"
-  },
-  "dependencies": {
-    "@solidjs/router": "^0.13.1",
-    "solid-js": "^1.8.11"
-  }
+	"name": "vite-template-solid",
+	"version": "0.0.0",
+	"description": "",
+	"scripts": {
+		"start": "vite",
+		"dev": "vite",
+		"build": "vite build",
+		"serve": "vite preview"
+	},
+	"license": "MIT",
+	"devDependencies": {
+		"autoprefixer": "^10.4.19",
+		"daisyui": "^4.7.3",
+		"postcss": "^8.4.38",
+		"solid-devtools": "^0.29.2",
+		"tailwindcss": "^3.4.1",
+		"typescript": "^5.3.3",
+		"vite": "^5.0.11",
+		"vite-plugin-solid": "^2.8.2"
+	},
+	"dependencies": {
+		"@solidjs/router": "^0.13.1",
+		"@supabase/supabase-js": "^2.39.8",
+		"clsx": "^2.1.0",
+		"framer-motion": "^11.0.20",
+		"solid-js": "^1.8.16",
+		"supabase": "^1.150.0",
+		"tailwind-merge": "^2.2.2"
+	}
 }
