--- a/codebase/package.json
+++ b/codebase/package.json
@@ -15,12 +15,15 @@
 		"postcss": "^8.4.38",
 		"solid-devtools": "^0.29.2",
 		"tailwindcss": "^3.4.1",
-		"typescript": "^5.3.3",
-		"vite": "^5.0.11",
-		"vite-plugin-solid": "^2.8.2"
+		"typescript": "^5.4.3",
+		"vite": "^5.2.2",
+		"vite-plugin-solid": "^2.10.2"
 	},
 	"dependencies": {
 		"@solidjs/router": "^0.13.1",
+		"@suid/icons-material": "^0.7.0",
+		"@suid/material": "^0.16.0",
+		"@suid/vite-plugin": "^0.2.0",
 		"@supabase/supabase-js": "^2.39.8",
 		"clsx": "^2.1.0",
 		"framer-motion": "^11.0.20",
