--- a/codebase/package.json
+++ b/codebase/package.json
@@ -25,6 +25,8 @@
 		"@suid/material": "^0.16.0",
 		"@suid/vite-plugin": "^0.2.0",
 		"@supabase/supabase-js": "^2.39.8",
+		"@types/express": "^4.17.21",
+		"@types/node": "^20.11.30",
 		"clsx": "^2.1.0",
 		"framer-motion": "^11.0.20",
 		"solid-js": "^1.8.16",
